--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai": "^4.1.2",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
+    "locus": "^2.0.1",
     "mocha": "^5.0.5",
     "style-loader": "^0.20.3",
     "webpack": "^4.2.0"
