--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha",
+    "eslint": "./node_modules/eslint/bin/eslint.js ./lib/*.js",
     "start": "webpack"
   },
   "repository": {
